k8s/apps/web5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web5
  namespace: cwx
spec:
  selector:
    app: web5
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
