k8s/apps/web5/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web5-route
  namespace: cwx
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
  hostnames:
    - "web5.chenwx.top"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web5
          port: 80
